--- a/Vandy Vans/Vandy Vans/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Vandy Vans/Vandy Vans/en.lproj/MainStoryboard_iPhone.storyboard
@@ -53,7 +53,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pfd-46-dPL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1174" y="394"/>
+            <point key="canvasLocation" x="1700" y="394"/>
         </scene>
         <!--About Table View Controller - About-->
         <scene sceneID="rBQ-Z3-tlK">
@@ -126,7 +126,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LPR-4B-FVK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2381" y="-398"/>
+            <point key="canvasLocation" x="2907" y="-398"/>
         </scene>
         <!--Report Table View Controller - Report a Bug-->
         <scene sceneID="1A9-FN-nw5">
@@ -235,7 +235,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Vx6-hQ-jkJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2794" y="-398"/>
+            <point key="canvasLocation" x="3320" y="-398"/>
         </scene>
         <!--Stop Table View Controller - Other Stops-->
         <scene sceneID="6tp-h8-66G">
@@ -274,7 +274,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZRm-O6-jKP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1651" y="888"/>
+            <point key="canvasLocation" x="1700" y="1063"/>
         </scene>
         <!--Arrival Time Table View Controller-->
         <scene sceneID="Fwi-FB-9Ay">
@@ -371,34 +371,42 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xxc-cU-GGn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2882" y="312"/>
+            <point key="canvasLocation" x="3408" y="312"/>
         </scene>
-        <!--Map View Controller - Live Map-->
+        <!--Map View Controller-->
         <scene sceneID="s48-ky-5d3">
             <objects>
                 <viewController id="5wh-qK-Mbq" customClass="VVMapViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="nbf-XI-cDw">
-                        <rect key="frame" x="0.0" y="20" width="320" height="499"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="455"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="pp6-W3-XZk"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="feV-Ep-Gkd" customClass="GMSMapView">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="pp6-W3-XZk" firstAttribute="leading" secondItem="nbf-XI-cDw" secondAttribute="leading" type="default" id="3oC-up-ud8"/>
-                            <constraint firstItem="pp6-W3-XZk" firstAttribute="bottom" secondItem="nbf-XI-cDw" secondAttribute="bottom" type="default" id="NP3-CY-1eB"/>
-                            <constraint firstItem="pp6-W3-XZk" firstAttribute="trailing" secondItem="nbf-XI-cDw" secondAttribute="trailing" type="default" id="Oam-8b-Xio"/>
-                            <constraint firstItem="pp6-W3-XZk" firstAttribute="top" secondItem="nbf-XI-cDw" secondAttribute="top" type="default" id="fjd-ee-5ww"/>
+                            <constraint firstItem="feV-Ep-Gkd" firstAttribute="leading" secondItem="nbf-XI-cDw" secondAttribute="leading" type="default" id="MrG-kb-oY5"/>
+                            <constraint firstItem="feV-Ep-Gkd" firstAttribute="top" secondItem="nbf-XI-cDw" secondAttribute="top" type="default" id="NX0-Yj-qL8"/>
+                            <constraint firstItem="feV-Ep-Gkd" firstAttribute="bottom" secondItem="nbf-XI-cDw" secondAttribute="bottom" type="default" id="Yz1-sZ-RUd"/>
+                            <constraint firstItem="feV-Ep-Gkd" firstAttribute="trailing" secondItem="nbf-XI-cDw" secondAttribute="trailing" type="default" id="udX-IL-dON"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Live Map" image="map" id="Ng9-Gg-kQX"/>
+                    <navigationItem key="navigationItem" id="FsR-Gf-r8R">
+                        <barButtonItem key="rightBarButtonItem" title="Route" id="4p3-jh-Gv8">
+                            <connections>
+                                <action selector="routePressed:" destination="5wh-qK-Mbq" id="e9r-uk-WJF"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
-                        <outlet property="vanMapView" destination="pp6-W3-XZk" id="MgI-Bx-vzJ"/>
+                        <outlet property="vanMapView" destination="feV-Ep-Gkd" id="dkN-gB-Hr1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fuu-Ds-vp3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="655" y="-225"/>
+            <point key="canvasLocation" x="1181" y="-225"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="QZs-kD-FRb">
@@ -412,7 +420,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="7Lf-VM-cST" kind="relationship" relationship="viewControllers" id="kmj-eX-wMF"/>
-                        <segue destination="5wh-qK-Mbq" kind="relationship" relationship="viewControllers" id="mkr-a7-sdw"/>
+                        <segue destination="xSt-69-ci1" kind="relationship" relationship="viewControllers" id="mkr-a7-sdw"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rZc-IV-1ut" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -454,7 +462,26 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="53n-GS-9Jf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1917" y="-281"/>
+            <point key="canvasLocation" x="2443" y="-281"/>
+        </scene>
+        <!--Navigation Controller - Live Map-->
+        <scene sceneID="nm9-Ce-yP1">
+            <objects>
+                <navigationController id="xSt-69-ci1" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Live Map" image="map" id="Ng9-Gg-kQX"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="XJE-Zd-aPF">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="5wh-qK-Mbq" kind="relationship" relationship="rootViewController" id="4SP-ek-ngq"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bGF-qe-ZBs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="655" y="-225"/>
         </scene>
     </scenes>
     <resources>
@@ -462,6 +489,9 @@
         <image name="target" width="16" height="16"/>
     </resources>
     <classes>
+        <class className="GMSMapView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GMSMapView.h"/>
+        </class>
         <class className="NSLayoutConstraint" superclassName="NSObject">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
         </class>
@@ -474,7 +504,6 @@
         <class className="VVAboutTableViewController" superclassName="UITableViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/VVAboutTableViewController.h"/>
             <relationships>
-                <relationship kind="action" name="donePressed:" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="reportBugTableViewCell" candidateClass="UITableViewCell"/>
                 <relationship kind="outlet" name="sendFeedbackTableViewCell" candidateClass="UITableViewCell"/>
             </relationships>
@@ -488,7 +517,7 @@
         <class className="VVMapViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/VVMapViewController.h"/>
             <relationships>
-                <relationship kind="outlet" name="vanMapView" candidateClass="MKMapView"/>
+                <relationship kind="outlet" name="vanMapView" candidateClass="GMSMapView"/>
             </relationships>
         </class>
         <class className="VVNotificationCell" superclassName="UITableViewCell">
@@ -500,7 +529,6 @@
         <class className="VVReportTableViewController" superclassName="UITableViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/VVReportTableViewController.h"/>
             <relationships>
-                <relationship kind="action" name="sendPressed:" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="descriptionTableViewCell" candidateClass="UITableViewCell"/>
                 <relationship kind="outlet" name="descriptionTextView" candidateClass="SSTextView"/>
                 <relationship kind="outlet" name="emailTableViewCell" candidateClass="UITableViewCell"/>
